# ns-scheduler

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  values.yaml.example
.github/workflows/: CI.yml
helm/chart/: Chart.yaml  values.yaml
helm/chart/templates/: _helpers.tpl  configmap.yaml  deployment-dashboard.yaml  deployment-scheduler.yaml  rbac.yaml  service-account.yaml  service-dashboard.yaml  service-scheduler.yaml  virtual-service.yaml
nsscheduler/: __init__.py  api.py  main.py  scheduler.py  updown.py
nsscheduler/dashboard/: app.py
nsscheduler/dashboard/assets/: styles.css  table.css
nsscheduler/data_models/: api.py  internal.py  scheduler_config.py
tests/: test_scheduler.py  validate_versions_matching.sh
